--- a/public/styling/style.css
+++ b/public/styling/style.css
@@ -10,7 +10,7 @@
     --colors-content-dark: #2F2F2F;
     --colors-text-light: #ffffff;
     --colors-text: #ffffff;
-    --colors-text-dark: #EAE9E9;
+    --colors-text-dark: #000000;
     --colors-text-hover: #276bd2;
 
     --font-header: 3rem;
