--- a/public/styling/crud.css
+++ b/public/styling/crud.css
@@ -25,7 +25,7 @@ input {
     display: flex;
     justify-content: center;
     border-radius: 10px;
-    color: var(--colors-text-light);
+    color: var(--colors-text-dark);
     padding: 5px;
 }
 
